--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
+pytest
 coverage
+requests
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+scikit-learn
+statsmodels
+lxml
+beautifulsoup4
+pylint
+redis
+redis[hiredis]
+pygame
